kubernetes-resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: nginx-k8s-deployment
  namespace: default
  labels:
    app: nginx
spec: 
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template: 
    metadata:
      labels: 
        app: nginx
    spec:
      containers:
      - image: nginx:1.16.0
        imagePullPolicy: IfNotPresent
        name: nginx
        ports: 
          - containerPort: 80
            name: nginx-http
      terminationGracePeriodSeconds: 10

---

apiVersion: v1
kind: Service
metadata:
  name: nginx-k8s-service
  namespace: default
  labels:
    app: nginx
spec:
  type: NodePort
  ports:
  - port: 80
  selector:
    app: nginx
