kubernetes-resources/statefulset.yaml

kind: Service
apiVersion: v1
metadata:
  name: elasticsearch
  namespace: elasticsearch-cluster
  labels:    
    app: elasticsearch
spec:
  selector:      
      app: elasticsearch
  ports:
    - name: http-rest
      port: 9200
    - name: transport
      port: 9300
  type: ClusterIP

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elasticsearch
  namespace: elasticsearch-cluster
spec:
  serviceName: elasticsearch
  replicas: 3
  selector:
    matchLabels:      
      app: elasticsearch
  template:
    metadata:
      labels:        
        app: elasticsearch
    spec:
      containers:
      - name: elasticsearch
        image: docker.elastic.co/elasticsearch/elasticsearch-oss:7.0.1
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: 700m
          requests:
            cpu: 400m
        ports:
        - name: http-rest
          containerPort: 9200
        - name: transport
          containerPort: 9300
        readinessProbe:
          tcpSocket:
            port: transport
          initialDelaySeconds: 20
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: transport
          initialDelaySeconds: 20
          periodSeconds: 10
        volumeMounts:
        - name: elasticsearch-volume
          mountPath: /usr/share/elasticsearch/data
  volumeClaimTemplates:
  - metadata:
      name: elasticsearch-volume
      labels:
        app: elasticsearch
    spec:
      accessModes:
        - ReadWriteOnce
      resources:
        requests:
          storage: 500Mi
